<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_gravity="bottom"
                android:text="@string/filter_gender" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/reset_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:padding="5dp"
                android:textAllCaps="false"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/filter_reset" />

            <Button
                android:id="@+id/apply_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textAllCaps="false"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/filter_apply" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/gender_rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/male_rbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/green"
                android:textColor="@color/black"
                android:text="@string/gender_male" />

            <RadioButton
                android:id="@+id/female_rbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/green"
                android:textColor="@color/black"
                android:text="@string/gender_female" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/filter_profession" />

        <RadioGroup
            android:id="@+id/profession_rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/developer_rbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/green"
                android:textColor="@color/black"
                android:text="@string/profession_developer" />

            <RadioButton
                android:id="@+id/metalworker_rbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/green"
                android:textColor="@color/black"
                android:text="@string/profession_metalworker" />

            <RadioButton
                android:id="@+id/gemcutter_rbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/green"
                android:textColor="@color/black"
                android:text="@string/profession_gemcutter" />

            <RadioButton
                android:id="@+id/medic_rbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/green"
                android:textColor="@color/black"
                android:text="@string/profession_medic" />

            <RadioButton
                android:id="@+id/brewer_rbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/green"
                android:textColor="@color/black"
                android:text="@string/profession_brewer" />

        </RadioGroup>

    </LinearLayout>

</androidx.cardview.widget.CardView>