<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".classes.modules.list.view.ListFragment">

    <LinearLayout
        android:id="@+id/tab_bar_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/welcome_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/list_title"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/search_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/wonka_hat" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tab_bar_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tab_bar_title"
        android:layout_marginHorizontal="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/all_btn"
            android:background="@drawable/filter_button_bg"
            style="@style/FilterButtonOff"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/filter_everyone"
            app:icon="@drawable/ic_label" />

        <Button
            android:id="@+id/gender_btn"
            android:background="@drawable/circular_button_bg"
            style="@style/FilterButtonOn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:visibility="gone"
            android:text="@string/filter_gender"
            app:icon="@drawable/ic_label" />

        <Button
            android:id="@+id/profession_btn"
            android:background="@drawable/circular_button_bg"
            style="@style/FilterButtonOn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:visibility="gone"
            android:text="@string/filter_profession"
            app:icon="@drawable/ic_label" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/employees_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tab_bar_subtitle"
        android:layout_alignParentBottom="true"
        android:paddingHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:paddingBottom="60dp"
        android:clipToPadding="false"
        tools:listitem="@layout/loompa_item"
        tools:itemCount="15" />

    <Button
        android:id="@+id/filter_btn"
        style="@style/IconTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/circular_button_bg"
        android:text="@string/filter_select"
        app:icon="@drawable/ic_filter" />

    <FrameLayout
        android:id="@+id/detail_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>