<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".classes.modules.detail.view.DetailFragment">

    <LinearLayout
        android:id="@+id/tab_bar_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_chevron_left" />

        <TextView
            android:id="@+id/welcome_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/detail_title"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/search_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/wonka_hat"
            android:backgroundTint="@color/background"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/detail_pb"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:visibility="visible" />

    <RelativeLayout
        android:id="@+id/detail_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tab_bar_title">

        <ImageView
            android:id="@+id/profile_iv"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"
            tools:src="@drawable/image_placeholder" />

        <TextView
            android:id="@+id/name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/profile_iv"
            android:layout_alignTop="@id/profile_iv"
            android:layout_marginTop="8dp"
            android:layout_marginStart="15dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Marcy Karadzas" />

        <ImageView
            android:id="@+id/gender_iv"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_toEndOf="@id/name_tv"
            android:layout_alignTop="@id/profile_iv"
            tools:src="@drawable/ic_female" />

        <TextView
            android:id="@+id/email_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/profile_iv"
            android:layout_below="@id/name_tv"
            android:layout_marginStart="18dp"
            android:textColor="@color/text_gray"
            android:textSize="14sp"
            tools:text="mkaradzas1@visualengin.com" />

        <TextView
            android:id="@+id/profession_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/profile_iv"
            android:layout_alignBottom="@id/profile_iv"
            android:layout_marginStart="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/green"
            tools:text="Developer" />

        <TextView
            android:id="@+id/country_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@id/profile_iv"
            android:layout_marginEnd="35dp"
            android:textColor="@color/black"
            android:textStyle="italic|bold"
            tools:text="Loompalandia"/>

        <LinearLayout
            android:id="@+id/loompa_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/profile_iv"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="15dp">

            <include layout="@layout/simple_data_layout"
                android:id="@+id/age_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <include layout="@layout/simple_data_layout"
                android:id="@+id/height_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"/>

            <include layout="@layout/simple_data_layout"
                android:id="@+id/food_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <include layout="@layout/simple_data_layout"
                android:id="@+id/color_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp" />

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:background="@color/green"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/loompa_info"
            android:layout_marginHorizontal="8dp" />

        <LinearLayout
            android:id="@+id/random_string_box"
            android:background="@drawable/detail_item_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loompa_info"
            android:layout_marginTop="25dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/random_string_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/detail_quote" />

            <ScrollView
                android:id="@+id/random_string_scroll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:padding="15dp"
                android:scrollbars="none">

                <TextView
                    android:id="@+id/random_string_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et libero at massa porttitor eleifend eget commodo ante. magna eu diam iaculis lacinia ac at neque. Aliquam laoreet ullamcorper sodales. Etiam interdum metus eu diam semper lobortis. Integer blandit sem at ligula tincidunt gravida. Aenean scelerisque sagittis mattis. Curabitur non eros porta, ultricies felis ut, faucibus est. Fusce vel sodales orci. Phasellus laoreet porttitor orci, nec sollicitudin nibh dapibus ac. Sed pharetra posuere neque, at posuere diam accumsan nec. Vestibulum nisl nisl, molestie et magna in, convallis vulputate tellus. Duis mollis sollicitudin pellentesque. Nulla placerat ullamcorper nibh ac cursus. Nullam tempus eros a ex iaculis, ut vulputate diam rhoncus." />

            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/song_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/random_string_box"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/detail_item_bg"
            android:orientation="vertical">

            <TextView
                android:id="@+id/song_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/detail_song" />

            <ScrollView
                android:id="@+id/song_scroll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:visibility="gone"
                android:scrollbars="none">

                <TextView
                    android:id="@+id/song_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et libero at massa porttitor eleifend eget commodo ante. magna eu diam iaculis lacinia ac at neque. Aliquam laoreet ullamcorper sodales. Etiam interdum metus eu diam semper lobortis. Integer blandit sem at ligula tincidunt gravida. Aenean scelerisque sagittis mattis. Curabitur non eros porta, ultricies felis ut, faucibus est. Fusce vel sodales orci. Phasellus laoreet porttitor orci, nec sollicitudin nibh dapibus ac. Sed pharetra posuere neque, at posuere diam accumsan nec. Vestibulum nisl nisl, molestie et magna in, convallis vulputate tellus. Duis mollis sollicitudin pellentesque. Nulla placerat ullamcorper nibh ac cursus. Nullam tempus eros a ex iaculis, ut vulputate diam rhoncus." />

            </ScrollView>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>